fix: register & login services and DTOs